--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body background="images/bg-intro-desktop.png">
+  <div class="description">
+    Learn to code by watching others
 
-  Learn to code by watching others
+    See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+    but understanding how developers think is invaluable.
+  </div>
+  <div class="Form">
+    Try it free 7 days then $20/mo. thereafter
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+    First Name 
+    Last Name 
+    Email Address
+    Password
+  
+    Claim your free trial 
+  
+    By clicking the button, you are agreeing to our Terms and Services
+  </div>
   
   <footer>
     <p class="attribution">
