--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
-
   <link rel="stylesheet" href="style.css">
 </head>
-<body background="images/bg-intro-desktop.png">
-  <div class="description">
-    Learn to code by watching others
-
-    See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-    but understanding how developers think is invaluable.
-  </div>
-  <div class="Form">
-    Try it free 7 days then $20/mo. thereafter
-
-    First Name 
-    Last Name 
-    Email Address
-    Password
-  
-    Claim your free trial 
-  
-    By clicking the button, you are agreeing to our Terms and Services
-  </div>
-  
+<body>
+  <main>
+    <div class="Description">
+      <h1>Learn to code by watching others</h1>
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable.</p>
+    </div>
+    <div class="Form">
+      <div class="Offer">
+        <span>Try it free 7 days</span> then $20/mo. thereafter
+      </div>
+      <div class="Inputs">
+      <form>
+        <input type="text" required placeholder="First Name" >
+        <input type="text" required placeholder="Last Name">
+        <input type="email" required placeholder="Email Address">
+        <input type="password" required placeholder="Password">
+        <input type="submit" value="CLAIM YOUR FREE TRIAL" class="submit">
+      </form>
+      <p class="terms">By clicking the button, you are agreeing to our <a href="">Terms and Services</a> </p>
+    </div>
+    </div>
+  </main>
   <footer>
-    <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+      Coded by <a href="https://www.frontendmentor.io/profile/omarsaleh1" target="_blank">Omar</a>
   </footer>
 </body>
 </html>
